updated sizing and alignment, added text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p id="IntroParagraph" class="col-md-4 col-xs-offset-1 col-xs-10">
                 <!-- Inject your IntroParagraph here -->
             </p>
-            <img  id="MilosHouses" src="Assets/images/milos-greece-colorful-houses.jpg" alt="Milos Greece colorful houses">
+            <img  class="pictureScaling" src="Assets/images/milos-greece-colorful-houses.jpg" alt="Milos Greece colorful houses">
         </article>
         <hr>
 
@@ -56,8 +56,8 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Folegandros</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/folegandros.jpg" alt="Folegandros">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Folegandros">
+            <img class="pictureScaling" src="Assets/images/folegandros.jpg" alt="Folegandros">
+            <p class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" id="Folegandros">
                 <!-- Inject your Folegandros paragraph here -->
             </p>
         </article>
@@ -65,17 +65,18 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Alonissos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/alonissos.jpg" alt="Alonissos">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Alonissos">
+
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Alonissos">
                 <!-- Inject your Alonissos paragraph here -->
             </p>
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling " src="Assets/images/alonissos.jpg" alt="Alonissos">
         </article>
         <hr>
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Spetses</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/spetses.jpg" alt="Spetses">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Spetses">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/spetses.jpg" alt="Spetses">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Spetses">
                 <!-- Inject your Spetses paragraph here -->
             </p>
         </article>
@@ -83,17 +84,18 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Amorgos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/amorgos.jpg" alt="Amorgos">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Amorgos">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Amorgos">
                 <!-- Inject your Amorgos paragraph here -->
             </p>
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/amorgos.jpg" alt="Amorgos">
+
         </article>
         <hr>
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Syros</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/syros.jpg" alt="Syros">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Syros">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/syros.jpg" alt="Syros">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Syros">
                 <!-- Inject your Syros paragraph here -->
             </p>
         </article>
@@ -101,17 +103,18 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Milos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/milos.jpg" alt="Milos">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Milos">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Milos">
                 <!-- Inject your Milos paragraph here -->
             </p>
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/milos.jpg" alt="Milos">
+
         </article>
         <hr>
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Hydra</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/hydra.jpg" alt="Hydra">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Hydra">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/hydra.jpg" alt="Hydra">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Hydra">
                 <!-- Inject your Hydra paragraph here -->
             </p>
         </article>
@@ -120,17 +123,17 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Ithaca</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/ithaca.jpg" alt="Ithaca">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Ithaca">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Ithaca">
                 <!-- Inject your Ithaca paragraph here -->
             </p>
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/ithaca.jpg" alt="Ithaca">
         </article>
         <hr>
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Gavdos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/gavdos.jpg" alt="Gavdos">
-            <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Gavdos">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10 pictureScaling" src="Assets/images/gavdos.jpg" alt="Gavdos">
+            <p class="col-md-4 col-xs-offset-1 col-xs-10" id="Gavdos">
                 <!-- Inject your Gavdos paragraph here -->
             </p>
         </article>
